syntax = "proto3";

package ru.tinkoff.academy.kafka;

option java_package = "ru.tinkoff.academy.proto.worker";
option java_multiple_files = true;

message WorkerJobRequest {
  string id = 1;
  int64 orderId = 2;
}

message WorkerJobResponse {
  int64 id = 1;
  WorkerJobEnum status = 2;

  enum WorkerJobEnum {
    rejected = 0;
    done = 1;
  }
}
